Update static chart

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- Dashboard -->
   <link rel="stylesheet" type="text/css" href="../../assets/css/keen-dashboards.css" />
 <script>
-        var static_ctx = document.getElementById('static-chart').getContext('2d');
+        var static_ctx = document.getElementById('static_chart').getContext('2d');
     
 </script>
 </head>
@@ -168,7 +168,7 @@
             Valutazione statica - Bar Chart 
           </div>
           <div class="chart-stage">
-<canvas id="static-chart"></canvas>
+<canvas id="static_chart"></canvas>
           </div>
           <div class="chart-notes">
             Valori ideali: AVAMPIEDE 45% RETROPIEDE 55%
