--- a/index.html
+++ b/index.html
@@ -247,7 +247,19 @@
 
 </body>
 </html>
-
+<scrip>
+<!-- create a heatmap instance-->
+        var heatmap = h337.create({
+          container: document.getElementById('heatmapContainer'),
+          maxOpacity: .5,
+          radius: 20,
+          blur: .4,
+          // update the legend whenever there's an extrema change
+          onExtremaChange: function onExtremaChange(data) {
+            updateLegend(data);
+          }
+        });
+</scrip>
 <script>
       window.onload = function() {
         // helper function
@@ -279,17 +291,7 @@
           }
         };
         /* legend code end */
-        // create a heatmap instance
-        var heatmap = h337.create({
-          container: document.getElementById('heatmapContainer'),
-          maxOpacity: .5,
-          radius: 20,
-          blur: .4,
-          // update the legend whenever there's an extrema change
-          onExtremaChange: function onExtremaChange(data) {
-            updateLegend(data);
-          }
-        });
+        
         // boundaries for data generation
         var width = (+window.getComputedStyle(document.body).width.replace(/px/,''));
         var height = (+window.getComputedStyle(document.body).height.replace(/px/,''));
@@ -304,9 +306,9 @@
             var c = ((Math.random()* max-min) >> 0) + min;
             var r = (Math.random()* 80) >> 0;
 
-            t.push({ x: 40, y:120, value: 25, radius: 30 });
-            t.push({ x: 120, y: 140, value: 90, radius: 30});
-            t.push({ x: 75, y:300, value: 75, radius: 30 });
+            t.push({ x: 40, y:120, value: 0, radius: 30 });
+            t.push({ x: 120, y: 140, value: 0, radius: 30});
+            t.push({ x: 75, y:300, value: 0, radius: 30 });
 
           var init = +new Date;
           // set the generated dataset
