--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
 </body>
 </html>
-<scrip>
+<script>
 <!-- create a heatmap instance-->
         var heatmap = h337.create({
           container: document.getElementById('heatmapContainer'),
@@ -259,7 +259,7 @@
             updateLegend(data);
           }
         });
-</scrip>
+</script>
 <script>
       window.onload = function() {
         // helper function
@@ -296,29 +296,7 @@
         var width = (+window.getComputedStyle(document.body).width.replace(/px/,''));
         var height = (+window.getComputedStyle(document.body).height.replace(/px/,''));
         // generate 1000 datapoints
-        var generate = function() {
-          // randomly generate extremas
-          var extremas = [0,100];
-          var max = Math.max.apply(Math, extremas);
-          var min = Math.min.apply(Math,extremas);
-          var t = [];
-          
-            var c = ((Math.random()* max-min) >> 0) + min;
-            var r = (Math.random()* 80) >> 0;
-
-            t.push({ x: 40, y:120, value: 0, radius: 30 });
-            t.push({ x: 120, y: 140, value: 0, radius: 30});
-            t.push({ x: 75, y:300, value: 0, radius: 30 });
-
-          var init = +new Date;
-          // set the generated dataset
-          heatmap.setData({
-            min: 0,
-            max: 100,
-            data: t
-          });
-          console.log('took ', (+new Date) - init, 'ms');
-        };
+        
         // initial generate
         generate();
       };
