--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@
                     </span>
                     <div style="text-align: center;">
                       <button id="connect" class="btn btn-success" onclick="connect();">Connect</button>
-                        <br>
-                      <small class="text-muted">Connect with STM32</small>
+                      <br>
+                      <button class="btn btn-danger" onclick="calibra_acc();">Calibra</button>
+                      <small id="calibrazione-text" class="text-muted">Effetturare Calibrazione</small>
+
+                      
                     </div>
                   </div>
                 </div>
