--- a/index.html
+++ b/index.html
@@ -83,9 +83,12 @@
                       <img src="assets/img/bluetooth.png" width="150" height="150" />
                     </span>
                     <div style="text-align: center;">
-                      <button id="connect" class="btn btn-success" onclick="connect();">Connect</button>
+                      <button id="connect" class="btn btn-success" onclick="connect();">Connetti</button>
+                      <br>
+                      <small id="connessione-text" class="text-muted">Connetti con SmartInsole</small>
                       <br>
                       <button class="btn btn-danger" onclick="calibra_acc();">Calibra</button>
+                      <br>
                       <small id="calibrazione-text" class="text-muted">Effetturare Calibrazione</small>
 
                       
