Update import js

--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
 
     </script>
     <script type="text/javascript" src="static.js"></script>
+    <script type="text/javascript" src="dynamic.js"></script>
 
 
 </body>
