--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
       body, html, h2 { margin:0; padding:0; height:100%;}
       body { font-family:sans-serif; }
       body * { font-weight:200;}
-      #heatmapContainerWrapper { width:167px;height:370px;background-image: url("feet.png");background-repeat: no-repeat;    background-position: center;display: inline-block;}
+      #heatmapContainerWrapper { position:relative;width:167px;height:370px;background-image: url("feet.png");background-repeat: no-repeat;    background-position: center;display: inline-block;}
       #heatmapContainer { width:100%; height:100%;}
       #heatmapLegend { background:white; bottom:0; right:0; padding:10px; }
       #min { float:left; }
       #max { float:right; }
       h1 { position:absolute; background:black; color:white; padding:10px; font-weight:200;}
+      .tooltip{position:absolute;left:0;top:0;background:rgba(0,0,0,.8);color:#fff;font-size:14px;padding:5px;line-height:18px;display:none;opacity: 1;}
     </style>
-      <style>.tooltip{position:absolute;left:0;top:0;background:rgba(0,0,0,.8);color:#fff;font-size:14px;padding:5px;line-height:18px;display:none}.demo-wrapper{position:relative}</style>
 
   <!-- Demo Dependencies -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
