--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       #min { float:left; }
       #max { float:right; }
       h1 { position:absolute; background:black; color:white; padding:10px; font-weight:200;}
-      .tooltip{position:absolute;left:0;top:0;background:rgba(0,0,0,.8);color:#fff;font-size:14px;padding:5px;line-height:18px;display:none;opacity: 1;}
+      .tooltip{position:absolute;left:0;top:0;background:rgba(0,0,0,.8);color:#fff;font-size:14px;padding:5px;line-height:18px;display:none;opacity: 1 !important;}
     </style>
 
   <!-- Demo Dependencies -->
