--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   </div>-->
        </div>
   <div class="container-fluid">
-    <p class="small text-muted">Dashboard built by Team 12 | Layout <a href="https://keen.io">Keen IO</a></p>
+    <p class="small text-muted">Dashboard built by Team 12 | Layout by <a href="https://keen.io">Keen IO</a></p>
   </div>
 
   <!-- Project Analytics -->
@@ -266,7 +266,7 @@ var heatmap = h337.create({
     updateLegend(data);
   }
 });
-   
+
 var legendCanvas = document.createElement('canvas');
 legendCanvas.width = 100;
 legendCanvas.height = 10;
