--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </div>
           </div>
           <div class="chart-notes">
-            <button id="download_static_chart" onclick="download_static_chart()">Download</button><p>Valore ideale (0) = [Avampiede 55%,Retropiede 45%]. A partire dal valore nominale viene indicato di quanto, in percentule, viene applicata un forza maggiore sull'Avampiede(valore positivo delle ordinato) o alternativamente sul Retropiede (valore negativo delle ordinate).</p>
+            <p>Valore ideale (0) = [Avampiede 55%,Retropiede 45%]. A partire dal valore nominale viene indicato di quanto, in percentule, viene applicata un forza maggiore sull'Avampiede(valore positivo delle ordinato) o alternativamente sul Retropiede (valore negativo delle ordinate).</p>
           </div>
         </div>
       </div>
@@ -173,10 +173,10 @@
             Valutazione statica - Bar Chart 
           </div>
           <div class="chart-stage">
-<canvas id="static_chart"></canvas>
+              <canvas id="static_chart"></canvas>
           </div>
           <div class="chart-notes">
-            Valori ideali: AVAMPIEDE 45% RETROPIEDE 55%
+            <button id="download_static_chart" onclick="download_static_chart()">Download</button><p>Valori ideali: AVAMPIEDE 45% RETROPIEDE 55%</p>
           </div>
         </div>
       </div>
