--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 </div>
           </div>
           <div class="chart-notes">
-            <p>Valore ideale (0) = [Avampiede 55%,Retropiede 45%]. A partire dal valore nominale viene indicato di quanto, in percentule, viene applicata un forza maggiore sull'Avampiede(valore positivo delle ordinato) o alternativamente sul Retropiede (valore negativo delle ordinate).</p>
+            <button id="download_dynamic_chart" onclick="download_dynamic_chart()">Download</button><p>Valore ideale (0) = [Avampiede 55%,Retropiede 45%]. A partire dal valore nominale viene indicato di quanto, in percentule, viene applicata un forza maggiore sull'Avampiede(valore positivo delle ordinato) o alternativamente sul Retropiede (valore negativo delle ordinate).</p>
           </div>
         </div>
       </div>
