--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
   <!-- Dashboard -->
   <link rel="stylesheet" type="text/css" href="../../assets/css/keen-dashboards.css" />
- <!-- From chart.js to pdf-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
-</head>
+ <!-- From chart.js to jpeg-->
+ <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+    </head>
 <body class="keen-dashboard" style="padding-top: 80px;">
 
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
