--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- Dashboard -->
   <link rel="stylesheet" type="text/css" href="../../assets/css/keen-dashboards.css" />
  <!-- From chart.js to jpeg-->
- <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.3/FileSaver.min.js"></script>
     </head>
 <body class="keen-dashboard" style="padding-top: 80px;">
 
