--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   <!-- Dashboard -->
   <link rel="stylesheet" type="text/css" href="../../assets/css/keen-dashboards.css" />
  <!-- From chart.js to jpeg-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.3/FileSaver.min.js"></script>
-    </head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
+</head>
 <body class="keen-dashboard" style="padding-top: 80px;">
 
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
