Update download chart image

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 </div>
           </div>
           <div class="chart-notes">
-            <button id="download_dynamic_chart" onclick="download_dynamic_chart()">Download</button><p>Valore ideale (0) = [Avampiede 55%,Retropiede 45%]. A partire dal valore nominale viene indicato di quanto, in percentule, viene applicata un forza maggiore sull'Avampiede(valore positivo delle ordinato) o alternativamente sul Retropiede (valore negativo delle ordinate).</p>
+            <a id="download_dynamic_chart" download="ValutazioneDinamica.jpeg""">Download</a><p>Valore ideale (0) = [Avampiede 55%,Retropiede 45%]. A partire dal valore nominale viene indicato di quanto, in percentule, viene applicata un forza maggiore sull'Avampiede(valore positivo delle ordinato) o alternativamente sul Retropiede (valore negativo delle ordinate).</p>
           </div>
         </div>
       </div>
@@ -232,7 +232,7 @@
               <canvas id="static_chart"></canvas>
           </div>
           <div class="chart-notes">
-            <button id="download_static_chart" onclick="download_static_chart()">Download</button><p>Valori ideali: AVAMPIEDE 45% RETROPIEDE 55%</p>
+             <a id="download_statica_chart" download="ValutazioneStatica.jpeg""">Download</a><p>Valori ideali: AVAMPIEDE 45% RETROPIEDE 55%</p>
           </div>
         </div>
       </div>
