Update download function

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               <canvas id="static_chart"></canvas>
           </div>
           <div class="chart-notes">
-             <a id="download_statica_chart" download="ValutazioneStatica.jpeg">Download</a><p>Valori ideali: AVAMPIEDE 45% RETROPIEDE 55%</p>
+             <a id="download_static_chart" download="ValutazioneStatica.jpeg">Download</a><p>Valori ideali: AVAMPIEDE 45% RETROPIEDE 55%</p>
           </div>
         </div>
       </div>
