--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ function updateTooltip(x, y, value) {
   // + 15 for distance to cursor
   var transl = 'translate(' + (x + 150) + 'px, ' + (y + 0) + 'px)';
   tooltip.style.webkitTransform = transl;
-  tooltip.innerHTML = value + "% - " (tot/100*value) + "kg";
+  tooltip.innerHTML = value + "% - " + (tot/100*value) + "kg";
 };
 demoWrapper.onmousemove = function(ev) {
   var x = ev.layerX;
