Update static table

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                   <table class="table" id="static-history">
         <thead>
       <tr>
-        <th>#</th>
+        <th>Time</th>
         <th>Retro (%)</th>
         <th>Avamp (%)</th>
         <th>Retro (kg)</th>
@@ -321,10 +321,10 @@
     <tbody>    
       <tr class="success">
         <td>Valori ideali</td>
-        <td>-</td>
-        <td>-</td>
-        <td>55</td>
         <td>45</td>
+        <td>55</td>
+        <td>-</td>
+        <td>-</td>
       </tr>
     </tbody>
   </table>
