--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <table class="table" id="dynamic_history">
     <thead>
       <tr>
-        <th>#</th>
+        <th>Time</th>
         <th>Retro %</th>
         <th>Avamp %</th>
       </tr>
