--- a/index.html
+++ b/index.html
@@ -297,6 +297,8 @@
             </div>
           <div class="chart-notes">
               <button id="btnExport" onclick="javascript:xport.toCSV('dynamic_history');"> Export to CSV</button>
+              <button onclick="remove_dynamic_history_rows()"> Clear All Data</button>
+
           </div>
         </div>
       </div>
@@ -337,6 +339,7 @@
           </div>
           <div class="chart-notes">
               <button id="btnExport" onclick="javascript:xport.toCSV('static_history');"> Export to CSV</button>
+              <button onclick="remove_static_history_rows()"> Clear All Data</button>
             </div>
         </div>
       </div>
