--- a/index.html
+++ b/index.html
@@ -276,15 +276,15 @@
     <thead>
       <tr>
         <th>Time</th>
-        <th>Retro %</th>
-        <th>Avamp %</th>
+        <th>Retro (%)</th>
+        <th>Avamp (%)</th>
       </tr>
     </thead> 
     <tbody id="dynamic-history-body">
       <tr class="success">
         <td>Valori ideali</td>
-        <td>55</td>
         <td>45</td>
+        <td>55</td>
       </tr>
      </tbody>
   </table>
@@ -318,14 +318,14 @@
         <th>Avamp (%)</th>
         <th>Retro (kg)</th>
         <th>Avamp (kg)</th>
-        <th>Durata (s)</th>
+        <th>Duration (s)</th>
       </tr>
         </thead>
     <tbody id="static-history-body">
       <tr class="success">
         <td>Valori ideali</td>
-        <td>45</td>
         <td>55</td>
+        <td>45</td>
         <td>-</td>
         <td>-</td>
         <td>51</td>
