--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 </div>
           </div>
           <div class="chart-notes">
-            <a id="download_dynamic_chart" download="ValutazioneDinamica.jpeg">Download</a><p>Valore ideale (0) = [Avampiede 55%,Retropiede 45%]. A partire dal valore nominale viene indicato di quanto, in percentule, viene applicata un forza maggiore sull'Avampiede(valore positivo delle ordinato) o alternativamente sul Retropiede (valore negativo delle ordinate).</p>
+            <a id="download_dynamic_chart" download="ValutazioneDinamica.jpeg">Download</a><a onclick="create_dynamic_chart()">Clear all data</a><p>Valore ideale (0) = [Avampiede 55%,Retropiede 45%]. A partire dal valore nominale viene indicato di quanto, in percentule, viene applicata un forza maggiore sull'Avampiede(valore positivo delle ordinato) o alternativamente sul Retropiede (valore negativo delle ordinate).</p>
           </div>
         </div>
       </div>
@@ -232,7 +232,7 @@
               <canvas id="static_chart"></canvas>
           </div>
           <div class="chart-notes">
-             <a id="download_static_chart" download="ValutazioneStatica.jpeg">Download</a><p>Valori ideali: AVAMPIEDE 45% RETROPIEDE 55%</p>
+             <a id="download_static_chart" download="ValutazioneStatica.jpeg">Download</a><a onclick="create_static_chart()">Clear all data</a><p>Valori ideali: AVAMPIEDE 45% RETROPIEDE 55%</p>
           </div>
         </div>
       </div>
@@ -358,7 +358,13 @@
 
     </script>
     <script type="text/javascript" src="static.js"></script>
+    <script>
+    create_static_chart();
+    </script>
     <script type="text/javascript" src="dynamic.js"></script>
+    <script>
+    create_dynamic_chart();
+    </script>
     <script type="text/javascript" src="export.js"></script>
 
 
@@ -408,7 +414,7 @@ function updateTooltip(x, y, value) {
   // + 15 for distance to cursor
   var transl = 'translate(' + (x + 150) + 'px, ' + (y + 0) + 'px)';
   tooltip.style.webkitTransform = transl;
-  tooltip.innerHTML = value + "% - " + (tot/100*value) + "kg";
+  tooltip.innerHTML = value + "% - " + (tot/100*value).toFixed(2) + "kg";
 };
 demoWrapper.onmousemove = function(ev) {
   var x = ev.layerX;
