--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       body, html, h2 { margin:0; padding:0; height:100%;}
       body { font-family:sans-serif; }
       body * { font-weight:200;}
-      #heatmapContainerWrapper { position:relative;width:167px;height:370px;background-image: url("feet.png");background-repeat: no-repeat;    background-position: center;display: inline-block;}
+      #heatmapContainerWrapper { position:relative;width:167px;height:370px;background-image: url("assets/img/feet.png");background-repeat: no-repeat;    background-position: center;display: inline-block;}
       #heatmapContainer { width:100%; height:100%;}
       #heatmapLegend { background:white; bottom:0; right:0; padding:10px; }
       #min { float:left; }
@@ -27,9 +27,9 @@
   <script>
     Holder.add_theme("white", { background:"#fff", foreground:"#a7a7a7", size:10 });
   </script>
-  <script src="timer.js"></script>
-  <script src="https://77mario.github.io/heatmap.js-master/build/heatmap.js"></script>
-  <script src="bluetooth.js"></script>
+  <script src="assets/js/timer.js"></script>
+  <script src="assets/js/heatmap.js"></script>
+  <script src="assets/js/bluetooth.js"></script>
   <!-- keen-analysis@1.2.2 -->
   <script src="https://d26b395fwzu5fz.cloudfront.net/keen-analysis-1.2.2.js" type="text/javascript"></script>
 
@@ -249,8 +249,7 @@
                 
     </div>
        
-    <script src="https://77mario.github.io/heatmap.js-master/build/heatmap.js"></script>
-                        <div class="tooltip" style="display: none; transform: translate(679px, 43px);">100</div>
+         <div class="tooltip" style="display: none; transform: translate(679px, 43px);">100</div>
 
           </div>
           <div class="chart-notes">
@@ -357,15 +356,15 @@
         var dynamic_ctx = document.getElementById('dynamic_chart').getContext('2d');
 
     </script>
-    <script type="text/javascript" src="static.js"></script>
+    <script type="text/javascript" src="assets/js/static.js"></script>
     <script>
     create_static_chart();
     </script>
-    <script type="text/javascript" src="dynamic.js"></script>
+    <script type="text/javascript" src="assets/js/dynamic.js"></script>
     <script>
     create_dynamic_chart();
     </script>
-    <script type="text/javascript" src="export.js"></script>
+    <script type="text/javascript" src="assets/js/export.js"></script>
 
 
 </body>
