--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
   </div>
        </div>
   <div class="container-fluid">
-    <p class="small text-muted">Dashboard built by Team 12 | Layout by <a href="https://keen.io">Keen IO</a></p>
+    <p class="small text-muted">Dashboard built by <b>Team 12</b></p>
   </div>
 
   <!-- Project Analytics -->
