--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             Times (from 10 and 99 sec):
                         <input id="static-seconds" type="number" name="time-heatmap" min="10" max="99" value="15">
                         <br>
-                        <small class="text-muted">Start the static evaluation</small>
+                        <small class="text-muted">Perform a static evaluation</small>
                     </div>
                    </form>
                   </div>
@@ -128,7 +128,7 @@
                     <div style="text-align: center;">
             <button id="dynamicButton" class="btn btn-warning" onclick="start_dynamic_evaluation()" disabled>Dynamic Evaluation</button>
         <br>
-                      <small class="text-muted">Start the dynamic evaluation</small>
+                      <small class="text-muted">Perform a dynamic evaluation</small>
                     </div>
                   </div>
                 </div>
