--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="card p-3">
                   <div class="d-flex align-items-center" style="text-align: center;">
                     <span class="stamp stamp-md bg-blue mr-3" style="display: inline-block; margin-bottom: 20px; margin-top: 20px;">
-                      <img src="assets/img/SynamicEvaluation_Icon.png" width="150" height="150" />
+                      <img src="assets/img/auto.png" width="150" height="150" />
                     </span>
                     <div style="text-align: center;">
             <button id="autoButton" class="btn btn-success" onclick="start_auto_evaluation()" disabled>Auto Evaluation</button>
